added change language

--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -20,6 +20,7 @@
     .contact-container {
         display: flex;
         justify-content: space-between;
+        max-width: 1100px;
         width: 90%;
         margin: auto;
         align-items: center;
