--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -21,6 +21,18 @@
         text-decoration: none;
         color: white;
     }
+    .languages {
+        position: absolute;
+        margin-top: 7px;
+        right: 470px;
+        @media screen and (max-width: 768px) {
+            right: 70px;
+        }
+        span {
+            margin: 0 10px;
+            cursor: pointer;
+        }
+    }
 
     .pages {
         font-weight: 600;
