--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -1,5 +1,52 @@
 #footer {
-    height: 300px;
-    width: 100%;
     background-color: #01023A;
+    .container-footer {
+        max-width: 1200px;
+        margin: auto;
+        min-height: 130px;
+        width: 100%;
+        padding-top: 30px;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        color: white;
+        @media screen and (max-width: 800px) {
+            display: block;
+            text-align: center;
+        }
+    }  
+
+    .logo {
+        width: 150px;
+        @media screen and (max-width: 800px) {
+            margin-bottom: 30px;
+        }
+    }
+
+    .social-network {
+        font-weight: 600;
+        margin-bottom: 10px;
+        text-align: center;
+        @media screen and (max-width: 800px) {
+            margin-top: 30px;
+        }
+    }
+    .links {
+        .linkedin {
+            color: #0077B5;
+            margin-right: 15px;
+        }
+        .github {
+            color: #76838a;
+        }
+    }
+
+    .copyright {
+        text-align: center;
+        color: white;
+        font-size: 1.2rem;
+        margin-top: 30px;
+        padding-bottom: 20px;
+        
+    }
 }
