--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -37,6 +37,7 @@
             height: 50px;
             width: 232px;
             border: 2px solid #FEFEFE;
+            border-radius: 10px;
             box-sizing: border-box;
             color: #FEFEFE;
             font-size: 18px;
