--- a/src/components/project/project.styles.scss
+++ b/src/components/project/project.styles.scss
@@ -44,6 +44,7 @@
             font-weight: 600;
             color: #03045E;
             border: 2px solid #03045E;
+            border-radius: 10px;
             background-color: rgba(255, 255, 255, .0);
             cursor: pointer;
             transition-duration: 0.2s;
