--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -52,6 +52,7 @@
                 margin-bottom: 50px;
                 background-color: #03045E;
                 border: 2px solid #03045E;
+                border-radius: 10px;
                 box-sizing: border-box;
                 font-size: 18px;
                 font-weight: 600;
