--- a/src/components/cover/cover.styles.scss
+++ b/src/components/cover/cover.styles.scss
@@ -13,6 +13,7 @@
         .text {
             font-size: 3rem;
             font-weight: bold;
+            text-transform: uppercase;
             @media screen and (max-width: 760px) {
                 font-size: 2rem !important;
             }
@@ -31,6 +32,7 @@
 
         .btn-services {
             margin-top: 40px;
+            border-radius: 10px;
             width: 90%;
             max-width: 350px;
             height: 50px;
