--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -1,6 +1,7 @@
 #projects {
     color: #121418;
     width: 90%;
+    max-width: 1270px;
     margin: auto;
     .projects-text {
         display: flex;
