--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -56,15 +56,18 @@
                 box-sizing: border-box;
                 font-size: 18px;
                 font-weight: 600;
-                height: 40px;
+                height: 50px;
                 width: 100%;
-                max-width: 300px;
                 color: #FEFEFE;
                 cursor: pointer;
                 transition-duration: 0.2s;
                 &:hover {
                     background-color: #FEFEFE;
                     color: #03045E;
+                }
+
+                .icon {
+                    color: white;
                 }
             }
 
@@ -76,9 +79,8 @@
                 box-sizing: border-box;
                 font-size: 18px;
                 font-weight: 600;
-                height: 40px;
+                height: 50px;
                 width: 100%;
-                max-width: 300px;
                 color: #bdbdc2;
                 cursor: pointer;
                 transition-duration: 0.2s;
