--- a/src/components/cover/cover.styles.scss
+++ b/src/components/cover/cover.styles.scss
@@ -12,7 +12,7 @@
 
         .text {
             font-size: 3rem;
-            font-weight: bold;
+            font-weight: 600;
             text-transform: uppercase;
             @media screen and (max-width: 760px) {
                 font-size: 2rem !important;
