--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -7,7 +7,7 @@
         width: 100%;
         padding-top: 30px;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         flex-wrap: wrap;
         color: white;
         @media screen and (max-width: 800px) {
@@ -17,9 +17,16 @@
     }  
 
     .logo {
-        width: 150px;
+        width: 200px;
         @media screen and (max-width: 800px) {
             margin-bottom: 30px;
+        }
+        .name {
+            font-size: 24px;
+            font-weight: bold;
+            padding-left: 50px;
+            text-decoration: none;
+            color: white;
         }
     }
 
